--- a/app/src/main/res/drawable/shape_indicator.xml
+++ b/app/src/main/res/drawable/shape_indicator.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
 >
 
-  <solid android:color="@color/primary"/>
+  <solid android:color="@color/indicator_bg"/>
 
   <corners android:radius="20dp"/>
 
